--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -12,6 +12,15 @@ layout: default
 		<h1>{{ page.title }}</h1>
 	</div>
 </header>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- First Ad -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-8459710473289765"
+     data-ad-slot="8694625139"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <div id="middle">
 <div id="article">
 	{{ content }}
